WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
157892
[ARM] Fix Wformat warning in MemoryPressureHandler.cpp
https://bugs.webkit.org/show_bug.cgi?id=157892
Summary
[ARM] Fix Wformat warning in MemoryPressureHandler.cpp
Csaba Osztrogonác
Reported
2016-05-19 06:01:13 PDT
../../Source/WebCore/platform/MemoryPressureHandler.cpp: In member function 'void WebCore::MemoryPressureHandler::ReliefLogger::logMemoryUsageChange()': ../../Source/WebCore/platform/MemoryPressureHandler.cpp:205:156: error: format '%lu' expects argument of type 'long unsigned int', but argument 4 has type 'size_t {aka unsigned int}' [-Werror=format=] ../../Source/WebCore/platform/MemoryPressureHandler.cpp:205:156: error: format '%lu' expects argument of type 'long unsigned int', but argument 5 has type 'size_t {aka unsigned int}' [-Werror=format=] ../../Source/WebCore/platform/MemoryPressureHandler.cpp:207:149: error: format '%lu' expects argument of type 'long unsigned int', but argument 4 has type 'size_t {aka unsigned int}' [-Werror=format=] ../../Source/WebCore/platform/MemoryPressureHandler.cpp:207:149: error: format '%lu' expects argument of type 'long unsigned int', but argument 5 has type 'size_t {aka unsigned int}' [-Werror=format=] ../../Source/WebCore/platform/MemoryPressureHandler.cpp:209:107: error: format '%lu' expects argument of type 'long unsigned int', but argument 3 has type 'size_t {aka unsigned int}' [-Werror=format=]
Attachments
Patch
(2.24 KB, patch)
2016-05-19 06:02 PDT
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2016-05-19 06:02:05 PDT
Created
attachment 279384
[details]
Patch
Michael Saboff
Comment 2
2016-05-19 06:45:39 PDT
Comment on
attachment 279384
[details]
Patch r=me
WebKit Commit Bot
Comment 3
2016-05-19 07:18:53 PDT
Comment on
attachment 279384
[details]
Patch Clearing flags on attachment: 279384 Committed
r201162
: <
http://trac.webkit.org/changeset/201162
>
WebKit Commit Bot
Comment 4
2016-05-19 07:18:55 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug