[ARM] Fix Wformat warning in MemoryPressureHandler.cpp https://bugs.webkit.org/show_bug.cgi?id=157892

Reviewed by Michael Saboff.

* platform/MemoryPressureHandler.cpp:
(WebCore::MemoryPressureHandler::ReliefLogger::logMemoryUsageChange):


Canonical link: https://commits.webkit.org/176013@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201162 268f45cc-cd09-0410-ab3c-d52691b4dbfc